--- a/index.html
+++ b/index.html
@@ -3,34 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcolatrice</title>
+    <title>Click the Ball</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="calculator">
-        <div class="display" id="display">0</div>
-        <div class="buttons">
-            <!-- First row -->
-            <button class="btn" onclick="clearDisplay()">C</button>
-            <button class="btn" onclick="appendValue('/')">/</button>
-            <button class="btn" onclick="appendValue('*')">*</button>
-            <button class="btn" onclick="deleteLast()">←</button>
-            <!-- Numbers and operators -->
-            <button class="btn" onclick="appendValue('7')">7</button>
-            <button class="btn" onclick="appendValue('8')">8</button>
-            <button class="btn" onclick="appendValue('9')">9</button>
-            <button class="btn" onclick="appendValue('-')">-</button>
-            <button class="btn" onclick="appendValue('4')">4</button>
-            <button class="btn" onclick="appendValue('5')">5</button>
-            <button class="btn" onclick="appendValue('6')">6</button>
-            <button class="btn" onclick="appendValue('+')">+</button>
-            <button class="btn" onclick="appendValue('1')">1</button>
-            <button class="btn" onclick="appendValue('2')">2</button>
-            <button class="btn" onclick="appendValue('3')">3</button>
-            <button class="btn equal" onclick="calculateResult()">=</button>
-            <button class="btn zero" onclick="appendValue('0')">0</button>
-            <button class="btn" onclick="appendValue('.')">.</button>
+    <div class="container">
+        <h1>Click the Ball!</h1>
+        <p>Punti: <span id="score">0</span></p>
+        <div id="game-area">
+            <div id="ball"></div>
         </div>
+        <button id="start-button">Inizia</button>
     </div>
     <script src="script.js"></script>
 </body>
