--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
         <h1>Click the Ball!</h1>
         <p>Punti: <span id="score">0</span></p>
+        <p>Tempo: <span id="time">30</span> sec</p>
         <div id="game-area">
             <div id="ball"></div>
         </div>
