--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             <div id="ball"></div>
         </div>
         <button id="start-button">Inizia</button>
+        <select id="theme-select">
+            <option value="light">Light Theme</option>
+            <option value="dark">Dark Theme</option>
+        </select>
     </div>
     <script src="script.js"></script>
 </body>
