--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <select id="theme-select" class="theme-select">
+        <option value="light">Light Theme</option>
+        <option value="dark">Dark Theme</option>
+    </select>
     <div class="container">
         <h1>Click the Ball!</h1>
         <p>Punti: <span id="score">0</span></p>
@@ -19,10 +23,6 @@
             <div id="ball"></div>
         </div>
         <button id="start-button">Inizia</button>
-        <select id="theme-select">
-            <option value="light">Light Theme</option>
-            <option value="dark">Dark Theme</option>
-        </select>
     </div>
     <script src="script.js"></script>
 </body>
