--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <select id="theme-select" class="theme-select">
-        <option value="light">Light Theme</option>
-        <option value="dark">Dark Theme</option>
-    </select>
+    <div class="theme-select-container">
+        <select id="theme-select" class="theme-select">
+            <option value="light">Light Theme</option>
+            <option value="dark">Dark Theme</option>
+        </select>
+    </div>
     <div class="container">
         <h1>Click the Ball!</h1>
         <p>Punti: <span id="score">0</span></p>
